Fixed some overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,11 @@
 html, body, .App {
+  margin: 0;
+  padding: 0;
   overflow-x: hidden;
-  width: 100vw;
 }
 
 .App {
   text-align: center;
-  width: 100vw;
 }
 
 .App-header {
@@ -13,11 +13,9 @@ html, body, .App {
   min-height: 10vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  width: 100vw;
 }
 
 .App-link {
